appId: com.viscouspot.gitsync
---

- runFlow: ./assert.yaml
- runFlow:
    when: 
      visible: "Username or email address"
    commands:
      - tapOn: "Username or email address"
      - inputText: ${MAESTRO_GITHUB_USERNAME}
      - hideKeyboard
      - tapOn: "Password"
      - inputText: ${MAESTRO_GITHUB_PASSWORD}
      - hideKeyboard
      - tapOn: "Sign In"
- tapOn: "Continue"
- runFlow:
    when: 
      visible: "Reauthorization required"
    commands:
      - tapOn: "Authorize ViscousPot"
      